--- a/index.html
+++ b/index.html
@@ -2744,7 +2744,7 @@
                     </div>
                 </div>
 
-                <div class="card">
+                <!-- <div class="card">
                     <img src="img/ron-santiago-de-cuba-12-anos-optimized.png.webp" alt="card-image">
                     <div class="product">
                         <h2>Ron Santiago de Cuba extra a&nacute;ejo</h2>
@@ -2775,7 +2775,7 @@
                     <div class="details">
                         <p>3500 $/u</p>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="card">
                     <img src="img/225b87ae-a293-49b5-8441-2435b61fe18d.png" alt="card-image">
