--- a/index.html
+++ b/index.html
@@ -67,6 +67,16 @@
             </div>
 
             <div class="hot-card">
+                <img src="img/pan-de-molde-casero--455896p708553.jpg" alt="card-image">
+                <div class="product">
+                    <h2>Pan casero</h2>
+                </div>
+                <div class="details">
+                    <p>260 $/u</p>
+                </div>
+            </div>
+
+            <div class="hot-card">
                 <img src="img/MANZANA-PERA-150.jpg" alt="card-image">
                 <div class="product">
                     <h2>Pure de frutas Galifresh</h2>
@@ -93,7 +103,7 @@
             <h1>C&aacute;rnicos</h1>
             <div class="card-container">
 
-                <div class="card">
+                <!-- <div class="card">
                     <img src="img/Bistec de cerdp.webp" alt="card-image">
                     <div class="product">
                         <h2>Bistec de cerdo</h2>
@@ -101,7 +111,7 @@
                     <div class="details">
                         <p>2520 $/KG</p>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="card">
                     <img src="img/Costilla-De-Cerdo.webp" alt="card-image">
@@ -305,7 +315,7 @@
                     </div>
                 </div>
 
-                <div class="card">
+                <!-- <div class="card">
                     <img src="img/Pollo-entero.webp" alt="card-image">
                     <div class="product">
                         <h2>Pollo Entero</h2>
@@ -314,7 +324,7 @@
                     <div class="details">
                         <p>2800 $/u</p>
                     </div>
-                </div>
+                </div> -->
 
                 <!-- <div class="card">
                     <img src="img/Pollo-entero.webp" alt="card-image">
@@ -360,7 +370,7 @@
                 <div class="card">
                     <img src="img/Carne-de-pollo.jpgweb.jpg.webp" alt="card-image">
                     <div class="product">
-                        <h2>Pollo</h2>
+                        <h2>Muslos de Pollo</h2>
                     </div>
                     <div class="details">
                         <p>800 $/KG</p>
@@ -380,7 +390,7 @@
                 <div class="card">
                     <img src="img/croquetas-caseras-350x350.jpg" alt="card-image">
                     <div class="product">
-                        <h2>Croquetas caseras</h2>
+                        <h2>Paquete de croquetas caseras</h2>
                     </div>
                     <div class="details">
                         <p>450 $</p>
@@ -402,7 +412,7 @@
                     </div>
                 </div>
 
-                <div class="card">
+                <!-- <div class="card">
                     <img src="img/Mercado-jamon-Vicky1.jpg" alt="card-image">
                     <div class="product">
                         <h2>Jam&oacute;n Vicky</h2>
@@ -410,9 +420,9 @@
                     <div class="details">
                         <p>1190 $/KG</p>
                     </div>
-                </div>
+                </div> -->
 
-                <div class="card">
+                <!-- <div class="card">
                     <img src="img/Hamb-Cerdo.jpg" alt="card-image">
                     <div class="product">
                         <h2>Jam&oacute;n Vicky especial</h2>
@@ -420,9 +430,9 @@
                     <div class="details">
                         <p>1350 $/KG</p>
                     </div>
-                </div>
+                </div> -->
 
-                <div class="card">
+                <!-- <div class="card">
                     <img src="img/Jamon-Escolar-1-kg-Producto.jpg" alt="card-image">
                     <div class="product">
                         <h2>Jam&oacute;n escolar</h2>
@@ -430,7 +440,7 @@
                     <div class="details">
                         <p>1150 $/KG</p>
                     </div>
-                </div> 
+                </div>  -->
 
                 <div class="card">
                     <img src="img/jamon-de-pavo-chata.jpg.webp" alt="card-image">
@@ -442,7 +452,7 @@
                     </div>
                 </div>
 
-                <div class="card">
+                <!-- <div class="card">
                     <img src="img/cuba-alimentos-restaurantes-viajes-envios-medicina-jamon-cerdo-SC.jpeg" alt="card-image">
                     <div class="product">
                         <h2>Jam&oacute;n de cerdo</h2>
@@ -450,9 +460,9 @@
                     <div class="details">
                         <p>1350 $/KG</p>
                     </div>
-                </div>
+                </div> -->
 
-                <div class="card">
+                <!-- <div class="card">
                     <img src="img/chorizo-vela.jpg" alt="card-image">
                     <div class="product">
                         <h2>Chorizo Vela</h2>
@@ -460,9 +470,9 @@
                     <div class="details">
                         <p>1250 $/KG</p>
                     </div>
-                </div>
+                </div> -->
 
-                <div class="card">
+                <!-- <div class="card">
                     <img src="img/9-Chorizo-entero.jpg" alt="card-image">
                     <div class="product">
                         <h2>Chorizo entero</h2>
@@ -470,7 +480,7 @@
                     <div class="details">
                         <p>3000 $/u</p>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="card">
                     <img src="img/jamon-dulce-con-aceitunas.jpg" alt="card-image">
@@ -482,7 +492,7 @@
                     </div>
                 </div>
 
-                <div class="card">
+                <!-- <div class="card">
                     <img src="img/jamon-de-pechuga-de-pollo.jpeg" alt="card-image">
                     <div class="product">
                         <h2>Jam&oacute;n de pechuga</h2>
@@ -490,7 +500,7 @@
                     <div class="details">
                         <p>2000 $/KG</p>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="card">
                     <img src="img/salchicha-de-pollo (1).jpg" alt="card-image">
@@ -505,7 +515,7 @@
             </div>
 
             <h1>Ahumados</h1>
-            <div class="card-container">
+            <!-- <div class="card-container">
                 <div class="card">
                     <img src="img/muslo ahumado-min.jpg" alt="card-image">
                     <div class="product">
@@ -514,9 +524,9 @@
                     <div class="details">
                         <p>1300 $/KG</p>
                     </div>
-                </div>
+                </div> -->
 
-                <div class="card">
+                <!-- <div class="card">
                     <img src="img/paticas-de-cerdo-ahumadas-min.jpg" alt="card-image">
                     <div class="product">
                         <h2>Paticas de cerdo</h2>
@@ -524,9 +534,9 @@
                     <div class="details">
                         <p>195 $/u</p>
                     </div>
-                </div>
+                </div> -->
 
-                <div class="card">
+                <!-- <div class="card">
                     <img src="img/Lomo de cerdo deshuesado ahumado-min.png" alt="card-image">
                     <div class="product">
                         <h2>Lomo de cerdo deshuesado</h2>
@@ -534,9 +544,9 @@
                     <div class="details">
                         <p>2900 $/KG</p>
                     </div>
-                </div>
+                </div> -->
 
-                <div class="card">
+                <!-- <div class="card">
                     <img src="img/pechuga-ahumada-pollo.jpg" alt="card-image">
                     <div class="product">
                         <h2>Jam&oacute;n de pechuga ahumado</h2>
@@ -544,9 +554,9 @@
                     <div class="details">
                         <p>2000 $/KG</p>
                     </div>
-                </div>
+                </div> -->
 
-                <div class="card">
+                <!-- <div class="card">
                     <img src="img/potajin.jpg" alt="card-image">
                     <div class="product">
                         <h2>Potaj&iacute;n</h2>
@@ -554,7 +564,7 @@
                     <div class="details">
                         <p>550 $/u</p>
                     </div>
-                </div>
+                </div> -->
 
             </div>
 
@@ -661,7 +671,7 @@
                     </div>
                 </div>
 
-                <div class="card">
+                <!-- <div class="card">
                     <img src="img/bonito-kORB-U80524109665uQC-1248x770@Diario Montanes.jpg.webp" alt="card-image">
                     <div class="product">
                         <h2>Rueda de bonito</h2>
@@ -669,7 +679,7 @@
                     <div class="details">
                         <p>1780 $/KG</p>
                     </div>
-                </div>
+                </div> -->
 
             </div>
 
@@ -740,7 +750,7 @@
 
             <h1>L&aacute;cteos</h1>
             <div class="card-container"> 
-                <!-- <div class="card">
+                <div class="card">
                     <img src="img/Queso Gouda-min.jpg" alt="card-image">
                     <div class="product">
                         <h2>Queso Gouda</h2>
@@ -748,7 +758,7 @@
                     <div class="details">
                         <p>2650 $/KG</p>
                     </div>
-                </div> -->
+                </div>
                
                 <div class="card">
                     <img src="img/kraft-100-grated-parmesan-cheese-shaker.jpg.webp" alt="card-image">
@@ -822,7 +832,7 @@
                         <div class="product">
                             <h2>Helado Cid</h2>
                             <h3>1.5L</h3>
-                            <h3>Multiples Sabores</h3>
+                            <h3>Chocolate</h3>
                         </div>
                         <div class="details">
                             <p>1200 $/u</p>
@@ -972,7 +982,7 @@
                     </div>
                 </div> -->
 
-                <div class="card">
+                <!-- <div class="card">
                     <img src="img/IMG_5999.JPG" alt="card-image">
                     <div class="product">
                         <h2>Cereal Oreo</h2>
@@ -980,9 +990,9 @@
                     <div class="details">
                         <p>2000 $</p>
                     </div>
-                </div> 
+                </div>  -->
 
-                <div class="card">
+                <!-- <div class="card">
                     <img src="img/IMG_6001.JPG" alt="card-image">
                     <div class="product">
                         <h2>Cereal Fruity Pebbles</h2>
@@ -990,7 +1000,7 @@
                     <div class="details">
                         <p>2000 $</p>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="card">
                     <img src="img/IMG_6003.PNG" alt="card-image">
@@ -1069,16 +1079,16 @@
                 </div>
             </div> 
 
-            <!-- <div class="card">
-                <img src="img/aceite-oliva-vima.jpg" alt="card-image">
+            <div class="card">
+                <img src="img/aceite de cocina.JPG" alt="card-image">
                 <div class="product">
-                    <h2>Aceite de Oliva</h2>
-                    <h3>900ml</h3>
+                    <h2>Aceite de girasol</h2>
+                    <h3>1L</h3>
                 </div>
                 <div class="details">
-                    <p>750 $</p>
+                    <p>800 $/u</p>
                 </div>
-            </div> -->
+            </div>
         
             <!-- <div class="card">
                 <img src="img/vinagre-blanco-min.jpg" alt="card-image">
@@ -2017,7 +2027,7 @@
             </div>
         </div>
 
-        <div class="card">
+        <!-- <div class="card">
             <img src="img/Rosquinhas Chocolate.jpeg" alt="card-image">
             <div class="product">
                 <h2>Rosquinhas</h2>
@@ -2026,13 +2036,14 @@
             <div class="details">
                 <p>650 $/u</p>
             </div>
-        </div>
+        </div> -->
 
         <div class="card">
             <img src="img/Rosquinhas Coco.jpeg" alt="card-image">
             <div class="product">
                 <h2>Rosquinhas</h2>
                 <h3>Coco</h3>
+                <h3>Nata</h3>
             </div>
             <div class="details">
                 <p>650 $/u</p>
@@ -2366,7 +2377,7 @@
                     <h3>355ml</h3>
                 </div>
                 <div class="details">
-                    <p>220 $/u</p>
+                    <p>210 $/u</p>
                 </div>
             </div>
 
@@ -2613,6 +2624,17 @@
                 </div> 
 
                 <div class="card">
+                    <img src="img/" alt="card-image">
+                    <div class="product">
+                        <h2>Malta Sunchy</h2>
+                        <h3>355ml</h3>
+                    </div>
+                    <div class="details">
+                        <p>215 $/u</p>
+                    </div>
+                </div>
+
+                <div class="card">
                     <img src="img/perla_negra Malta.webp" alt="card-image">
                     <div class="product">
                         <h2>Malta Perla Negra</h2>
@@ -2623,7 +2645,7 @@
                     </div>
                 </div>
 
-                <div class="card">
+                <!-- <div class="card">
                     <img src="img/Ballentines+500x500.png" alt="card-image">
                     <div class="product">
                         <h2>Whiskey Ballantines</h2>
@@ -2632,9 +2654,9 @@
                     <div class="details">
                         <p>3500 $/u</p>
                     </div>
-                </div>
+                </div> -->
 
-                <div class="card">
+                <!-- <div class="card">
                     <img src="img/Jameson-Triple-Destilado-700ml-Mercado-Libre-1.png" alt="card-image">
                     <div class="product">
                         <h2>Whiskey Jameson</h2>
@@ -2643,7 +2665,7 @@
                     <div class="details">
                         <p>3400 $/u</p>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="card">
                     <img src="img/MAT_103764_PCE_EE.webp" alt="card-image">
@@ -2667,7 +2689,7 @@
                     </div>
                 </div>
 
-                <div class="card">
+                <!-- <div class="card">
                     <img src="img/trapiche_malbec-1-1-1.jpg" alt="card-image">
                     <div class="product">
                         <h2>Vino blanco Trapiche</h2>
@@ -2676,7 +2698,7 @@
                     <div class="details">
                         <p>1450 $/u</p>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="card">
                     <img src="img/Vino-Casillero-del-Diablo-cabernet-sauvignon-750-cc.png" alt="card-image">
@@ -2700,7 +2722,7 @@
                     </div>
                 </div>
 
-                <div class="card">
+                <!-- <div class="card">
                     <img src="img/1x-misiones-de-rengo-reserva-carmenere-botella-750cc.jpg" alt="card-image">
                     <div class="product">
                         <h2>Vino tinto Misiones de Rengo</h2>
@@ -2709,9 +2731,9 @@
                     <div class="details">
                         <p>1800 $/u</p>
                     </div>
-                </div>
+                </div> -->
 
-                <div class="card">
+                <!-- <div class="card">
                     <img src="img/80190298.jpg.avif" alt="card-image">
                     <div class="product">
                         <h2>Vino tinto Aliwen</h2>
@@ -2720,7 +2742,7 @@
                     <div class="details">
                         <p>1800 $/u</p>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="card">
                     <img src="img/75d0c76b-6c60-4cdf-b2cb-e6ca4de3ea70-lg.jpg" alt="card-image">
@@ -2753,9 +2775,9 @@
                     <div class="details">
                         <p>4300 $/u</p>
                     </div>
-                </div>
+                </div> -->
 
-                <div class="card">
+                <!-- <div class="card">
                     <img src="img/superior_11annos-santiago-720x540.jpg" alt="card-image">
                     <div class="product">
                         <h2>Ron Santiago de Cuba 11 a&nacute;os</h2>
@@ -2764,7 +2786,7 @@
                     <div class="details">
                         <p>4300 $/u</p>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="card">
                     <img src="img/santiago-de-cuba-ron-anejo-8-anos.png" alt="card-image">
