--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <body>
         
-        <div class="hot-section">
+    <div class="hot-section">
         <div class="info">
             <h1>Cambio actual de la moneda</h1>
             <p>1 USD = 260 CUP</p>
@@ -515,8 +515,9 @@
             </div>
 
             <h1>Ahumados</h1>
-            <!-- <div class="card-container">
-                <div class="card">
+            <div class="card-container">
+
+                <!-- <div class="card">
                     <img src="img/muslo ahumado-min.jpg" alt="card-image">
                     <div class="product">
                         <h2>Muslo de pollo</h2>
@@ -571,6 +572,7 @@
 
             <h1>Mariscos y Pescados</h1>
             <div class="card-container">
+
                 <div class="card">
                     <img src="img/LANGOSTA-COLA-min.jpg" alt="card-image">
                     <div class="product">
@@ -2219,7 +2221,7 @@
             </div>
         </div> 
 
-        <div class="card">
+        <!-- <div class="card">
             <img src="img/IMG_6007.PNG" alt="card-image">
             <div class="product">
                 <h2>Galletas Saladitas</h2>
@@ -2227,7 +2229,7 @@
             <div class="details">
                 <p>210 $/u</p>
             </div>
-        </div> 
+        </div>  -->
 
         <div class="card">
             <img src="img/158189.jpg" alt="card-image">
@@ -2624,7 +2626,7 @@
                 </div> 
 
                 <div class="card">
-                    <img src="img/" alt="card-image">
+                    <img src="img/sunchy malta.png" alt="card-image">
                     <div class="product">
                         <h2>Malta Sunchy</h2>
                         <h3>355ml</h3>
@@ -2797,7 +2799,7 @@
                     <div class="details">
                         <p>3500 $/u</p>
                     </div>
-                </div> -->
+                </div>
 
                 <div class="card">
                     <img src="img/225b87ae-a293-49b5-8441-2435b61fe18d.png" alt="card-image">
