--- a/index.html
+++ b/index.html
@@ -1815,7 +1815,7 @@
         <div class="card">
             <img src="img/2006572-A_1.jpg" alt="card-image">
             <div class="product">
-                <h2>Habichuelas rojas/h2>
+                <h2>Habichuelas rojas</h2>
             </div>
             <div class="details">
                 <p>650 $/u</p>
