--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 </div>
             </div>
 
-            <div class="hot-card">
+            <!-- <div class="hot-card">
                 <img src="img/73ebcd20-3312-4be2-83ba-94139af4b1c9.b6d9014142f47c00bbda642fd99db60b.jpeg.webp" alt="card-image">
                 <div class="product">
                     <h2>Galletas dulces de mantequilla</h2>
@@ -94,7 +94,7 @@
                 <div class="details">
                     <p>1100 $/u</p>
                 </div>
-            </div>
+            </div> -->
 
             <div class="hot-card">
                 <img src="img/81w5tkyvaPL._AC_UF894,1000_QL80_.jpg" alt="card-image">
@@ -325,7 +325,7 @@
                     </div>
                 </div> -->
 
-                <!-- <div class="card">
+                <div class="card">
                     <img src="img/Pollo-entero.webp" alt="card-image">
                     <div class="product">
                         <h2>Pollo Entero</h2>
@@ -334,7 +334,7 @@
                     <div class="details">
                         <p>2800 $/u</p>
                     </div>
-                </div> -->
+                </div>
 
                 <!-- <div class="card">
                     <img src="img/Pollo-entero.webp" alt="card-image">
@@ -789,6 +789,7 @@
                     <div class="product">
                         <h2>Yogurt Cid Co&aacute;gulo saborizado</h2>
                         <h3>4L</h3>
+                        <h3>Fresa</h3>
                     </div>
                     <div class="details">
                         <p>2400 $/u</p>
