edited stax lays

--- a/index.html
+++ b/index.html
@@ -2009,7 +2009,7 @@
             </div>
         </div>
        
-        <div class="card">
+        <!-- <div class="card">
             <img src="img/Stax Salt and Vinegar.png" alt="card-image">
             <div class="product">
                 <h2>Stax Lays</h2>
@@ -2017,7 +2017,7 @@
             <div class="details">
                 <p>950 $/u</p>
             </div>
-        </div>
+        </div> -->
 
         <div class="card">
             <img src="img/fa_1686792912812_bmjwmhtjy8onxou.png" alt="card-image">
